php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #74596 SIGSEGV with opcache.revalidate_path enabled
Submitted: 2017-05-15 11:48 UTC Modified: 2017-05-16 04:58 UTC
From: stephan dot muggli at googlemail dot com Assigned: laruence (profile)
Status: Closed Package: opcache
PHP Version: 7.1.5 OS: Debian GNU/Linux 8
Private report: No CVE-ID: None
 [2017-05-15 11:48 UTC] stephan dot muggli at googlemail dot com
Description:
------------
Hi,

I have encoutered a problem with our application and PHP 7.1.x with opcache enabled. After some research I found out that the option "opcache.revalidate_path" costs the segfault when it is enabled. Disabling the option solves the problem for now.

I tried to find the code which brings up the segfault but the only thing I got is that it seems to be a problem with https://github.com/goaop/framework.

My system:
Debian GNU/Linux 8 (Jessie)
PHP 7.1.5-1+0~20170513113859.24+jessie~1.gbpe4bc94 (fpm-fcgi) (built: May 13 2017 15:43:15)
Copyright (c) 1997-2017 The PHP Group
Zend Engine v3.1.0, Copyright (c) 1998-2017 Zend Technologies
    with Zend OPcache v7.1.5-1+0~20170513113859.24+jessie~1.gbpe4bc94, Copyright (c) 1999-2017, by Zend Technologies
    with Xdebug v2.5.1, Copyright (c) 2002-2017, by Derick Rethans

Gdb backtrace:

#0  zend_string_hash_val (s=0x600007fe8f3a719) at ./Zend/zend_string.h:85
#1  zend_hash_find_bucket (ht=0x166a460, ht=0x166a460, key=0x600007fe8f3a719) at ./Zend/zend_hash.c:478
#2  zend_hash_find (ht=0x166a460, key=0x600007fe8f3a719) at ./Zend/zend_hash.c:1959
#3  0x0000000000667f5c in ZEND_INIT_NS_FCALL_BY_NAME_SPEC_CONST_HANDLER () at ./Zend/zend_vm_execute.h:2218
#4  0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#5  0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c161f0) at ./build-7.1/xdebug.c:1995
#6  0x0000000000670e8a in ZEND_DO_FCALL_SPEC_RETVAL_UNUSED_HANDLER () at ./Zend/zend_vm_execute.h:949
#7  0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#8  0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c16120) at ./build-7.1/xdebug.c:1995
#9  0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7ffcfdff6f30, fci_cache=0x7ffcfdff6e60, fci_cache@entry=0x0) at ./Zend/zend_execute_API.c:855
#10 0x00000000005bd505 in _call_user_function_ex (object=object@entry=0x7fe8e16ba8c8, function_name=function_name@entry=0x7ffcfdff6fa0, retval_ptr=retval_ptr@entry=0x7ffcfdff6fb0, param_count=param_count@entry=4,
    params=params@entry=0x7ffcfdff6fd0, no_separation=no_separation@entry=0) at ./Zend/zend_execute_API.c:672
#11 0x000000000055b65d in userfilter_filter (stream=<optimized out>, thisfilter=0x7fe8e16ba8c0, buckets_in=0x7ffcfdff7080, buckets_out=0x7ffcfdff7090, bytes_consumed=0x0, flags=<optimized out>) at ./ext/standard/user_filters.c:203
#12 0x000000000058065e in _php_stream_fill_read_buffer (stream=stream@entry=0x7fe973dad800, size=size@entry=4096) at ./main/streams/streams.c:592
#13 0x0000000000580907 in _php_stream_read (stream=0x7fe973dad800, buf=0x7fe8e1776000 "", size=4096) at ./main/streams/streams.c:721
#14 0x00000000005eb09d in zend_stream_read (file_handle=0x7ffcfdff7810, buf=0x7fe8e1776000 "", len=4096) at ./Zend/zend_stream.c:177
#15 0x00000000005eb41f in zend_stream_fixup (file_handle=file_handle@entry=0x7ffcfdff7810, buf=buf@entry=0x7ffcfdff7258, len=len@entry=0x7ffcfdff7260) at ./Zend/zend_stream.c:261
#16 0x0000000000591ed6 in open_file_for_scanning (file_handle=file_handle@entry=0x7ffcfdff7810) at Zend/zend_language_scanner.l:513
#17 0x0000000000592277 in compile_file (file_handle=0x7ffcfdff7810, type=2) at Zend/zend_language_scanner.l:627
#18 0x00007fe9659f24ba in phar_compile_file (file_handle=0x166a460, type=-386685159) at ./ext/phar/phar.c:3320
#19 0x00007fe9739a8cf4 in opcache_compile_file (file_handle=file_handle@entry=0x7ffcfdff7810, type=type@entry=2, op_array_p=op_array_p@entry=0x7ffcfdff76d8, key=<optimized out>) at ./ext/opcache/ZendAccelerator.c:1530
#20 0x00007fe9739aad79 in persistent_compile_file (file_handle=0x7ffcfdff7810, type=2) at ./ext/opcache/ZendAccelerator.c:1863
#21 0x00007fe97376407d in xdebug_compile_file (file_handle=<optimized out>, type=<optimized out>) at ./build-7.1/xdebug.c:2223
#22 0x000000000059247e in compile_filename (type=type@entry=2, filename=filename@entry=0x7fe973c16100) at Zend/zend_language_scanner.l:662
#23 0x0000000000631b3a in zend_include_or_eval (inc_filename=0x7fe973c16100, type=2) at ./Zend/zend_execute.c:2846
#24 0x000000000066d0a2 in ZEND_INCLUDE_OR_EVAL_SPEC_CV_HANDLER () at ./Zend/zend_vm_execute.h:35494
#25 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#26 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c160a0) at ./build-7.1/xdebug.c:1995
#27 0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7ffcfdff7bf0, fci_cache=fci_cache@entry=0x7ffcfdff7bc0) at ./Zend/zend_execute_API.c:855
#28 0x00000000005ec000 in zend_call_method (object=0x7fe973c67878, obj_ce=<optimized out>, fn_proxy=<optimized out>, function_name=0x7fe8e16231f8 "go\\instrument\\classloading\\aopcomposerloader::loadclassU\001",
    function_name_len=<optimized out>, retval_ptr=retval_ptr@entry=0x0, param_count=1, arg1=0x7fe973c16090, arg2=0x0) at ./Zend/zend_interfaces.c:99
#29 0x00000000004c93ce in zif_spl_autoload_call (execute_data=<optimized out>, return_value=<optimized out>) at ./ext/spl/php_spl.c:420
#30 0x00007fe973765616 in xdebug_execute_internal (current_execute_data=0x7fe973c16040, return_value=0x7ffcfdff7e80) at ./build-7.1/xdebug.c:2145
#31 0x00000000005bd27a in zend_call_function (fci=fci@entry=0x7ffcfdff7ec0, fci_cache=fci_cache@entry=0x7ffcfdff7e90) at ./Zend/zend_execute_API.c:871
#32 0x00000000005bd6de in zend_lookup_class_ex (name=0x7fe8f3593000, key=key@entry=0x0, use_autoload=use_autoload@entry=1) at ./Zend/zend_execute_API.c:1028
#33 0x00000000005bd97c in zend_lookup_class (name=<optimized out>) at ./Zend/zend_execute_API.c:1049
#34 0x00000000005e66e5 in zif_class_exists (execute_data=0x7fe973c15fd0, return_value=0x7fe973c15fa0) at ./Zend/zend_builtin_functions.c:1497
#35 0x00007fe973765616 in xdebug_execute_internal (current_execute_data=0x7fe973c15fd0, return_value=0x7fe973c15fa0) at ./build-7.1/xdebug.c:2145
#36 0x000000000067094c in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1099
#37 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#38 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15f10) at ./build-7.1/xdebug.c:1995
#39 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#40 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#41 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15e50) at ./build-7.1/xdebug.c:1995
#42 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#43 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#44 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15db0) at ./build-7.1/xdebug.c:1995
#45 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#46 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#47 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15ce0) at ./build-7.1/xdebug.c:1995
#48 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#49 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#50 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15c10) at ./build-7.1/xdebug.c:1995
#51 0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7ffcfdff8540, fci_cache=fci_cache@entry=0x7ffcfdff8510) at ./Zend/zend_execute_API.c:855
#52 0x0000000000504712 in zif_call_user_func (execute_data=<optimized out>, return_value=0x7fe973c15b60) at ./ext/standard/basic_functions.c:4834
#53 0x00007fe973765616 in xdebug_execute_internal (current_execute_data=0x7fe973c15b80, return_value=0x7fe973c15b60) at ./build-7.1/xdebug.c:2145
#54 0x000000000067094c in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1099
#55 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#56 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15aa0) at ./build-7.1/xdebug.c:1995
#57 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#58 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#59 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15a00) at ./build-7.1/xdebug.c:1995
#60 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#61 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#62 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15930) at ./build-7.1/xdebug.c:1995
#63 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#64 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#65 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15870) at ./build-7.1/xdebug.c:1995
#66 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#67 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#68 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c157d0) at ./build-7.1/xdebug.c:1995
#69 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#70 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#71 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15700) at ./build-7.1/xdebug.c:1995
#72 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#73 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#74 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15640) at ./build-7.1/xdebug.c:1995
#75 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#76 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#77 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c155b0) at ./build-7.1/xdebug.c:1995
#78 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#79 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#80 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15470) at ./build-7.1/xdebug.c:1995
#81 0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7ffcfdff8eb0, fci_cache=fci_cache@entry=0x7ffcfdff8e80) at ./Zend/zend_execute_API.c:855
#82 0x0000000000504712 in zif_call_user_func (execute_data=<optimized out>, return_value=0x7fe973c15390) at ./ext/standard/basic_functions.c:4834
#83 0x00007fe973765616 in xdebug_execute_internal (current_execute_data=0x7fe973c15400, return_value=0x7fe973c15390) at ./build-7.1/xdebug.c:2145
#84 0x000000000067094c in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1099
#85 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#86 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15290) at ./build-7.1/xdebug.c:1995
#87 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#88 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#89 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c151d0) at ./build-7.1/xdebug.c:1995
#90 0x0000000000670a23 in ZEND_DO_FCALL_SPEC_RETVAL_USED_HANDLER () at ./Zend/zend_vm_execute.h:1076
#91 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#92 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15120) at ./build-7.1/xdebug.c:1995
#93 0x0000000000670e8a in ZEND_DO_FCALL_SPEC_RETVAL_UNUSED_HANDLER () at ./Zend/zend_vm_execute.h:949
#94 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#95 0x00007fe973764cc6 in xdebug_execute_ex (execute_data=0x7fe973c15030) at ./build-7.1/xdebug.c:1995
#96 0x0000000000673060 in zend_execute (op_array=op_array@entry=0x7fe973c77000, return_value=return_value@entry=0x0) at ./Zend/zend_vm_execute.h:474
#97 0x00000000005cd5a3 in zend_execute_scripts (type=type@entry=8, retval=retval@entry=0x0, file_count=file_count@entry=3) at ./Zend/zend.c:1476
#98 0x0000000000569540 in php_execute_script (primary_file=0x7ffcfdffb8d0) at ./main/main.c:2537
#99 0x0000000000446cb8 in main (argc=26370848, argv=0x192628c) at ./sapi/fpm/fpm/fpm_main.c:1966

The segfault also occurs without xdebug.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2017-05-15 12:25 UTC] stephan dot muggli at googlemail dot com
I tried the demos provided by goaop framework (https://github.com/goaop/framework) and I could reproduce the segfault.

#0  0x0000000000667eb7 in ZEND_INIT_NS_FCALL_BY_NAME_SPEC_CONST_HANDLER () at ./Zend/zend_vm_execute.h:2216
#1  0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#2  0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf74144e0) at ./build-7.1/xdebug.c:1995
#3  0x0000000000670e8a in ZEND_DO_FCALL_SPEC_RETVAL_UNUSED_HANDLER () at ./Zend/zend_vm_execute.h:949
#4  0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#5  0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414410) at ./build-7.1/xdebug.c:1995
#6  0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7fff937b4050, fci_cache=0x7fff937b3f80, fci_cache@entry=0x0)
    at ./Zend/zend_execute_API.c:855
#7  0x00000000005bd505 in _call_user_function_ex (object=object@entry=0x7fbaf7402e18, function_name=function_name@entry=0x7fff937b40c0,
    retval_ptr=retval_ptr@entry=0x7fff937b40d0, param_count=param_count@entry=4, params=params@entry=0x7fff937b40f0,
    no_separation=no_separation@entry=0) at ./Zend/zend_execute_API.c:672
#8  0x000000000055b65d in userfilter_filter (stream=<optimized out>, thisfilter=0x7fbaf7402e10, buckets_in=0x7fff937b41a0,
    buckets_out=0x7fff937b41b0, bytes_consumed=0x0, flags=<optimized out>) at ./ext/standard/user_filters.c:203
#9  0x000000000058065e in _php_stream_fill_read_buffer (stream=stream@entry=0x7fbaf7479000, size=size@entry=4096) at ./main/streams/streams.c:592
#10 0x0000000000580907 in _php_stream_read (stream=0x7fbaf7479000, buf=0x7fbaf74a3000 "", size=4096) at ./main/streams/streams.c:721
#11 0x00000000005eb09d in zend_stream_read (file_handle=0x7fff937b4930, buf=0x7fbaf74a3000 "", len=4096) at ./Zend/zend_stream.c:177
#12 0x00000000005eb41f in zend_stream_fixup (file_handle=file_handle@entry=0x7fff937b4930, buf=buf@entry=0x7fff937b4378,
    len=len@entry=0x7fff937b4380) at ./Zend/zend_stream.c:261
#13 0x0000000000591ed6 in open_file_for_scanning (file_handle=file_handle@entry=0x7fff937b4930) at Zend/zend_language_scanner.l:513
#14 0x0000000000592277 in compile_file (file_handle=0x7fff937b4930, type=2) at Zend/zend_language_scanner.l:627
#15 0x00007fbae91f24ba in phar_compile_file (file_handle=0x68d, type=1) at ./ext/phar/phar.c:3320
#16 0x00007fbaf71a8cf4 in opcache_compile_file (file_handle=file_handle@entry=0x7fff937b4930, type=type@entry=2,
    op_array_p=op_array_p@entry=0x7fff937b47f8, key=<optimized out>) at ./ext/opcache/ZendAccelerator.c:1530
#17 0x00007fbaf71aad79 in persistent_compile_file (file_handle=0x7fff937b4930, type=2) at ./ext/opcache/ZendAccelerator.c:1863
#18 0x00007fbaf6f6407d in xdebug_compile_file (file_handle=<optimized out>, type=<optimized out>) at ./build-7.1/xdebug.c:2223
#19 0x000000000059247e in compile_filename (type=type@entry=2, filename=filename@entry=0x7fbaf74143f0) at Zend/zend_language_scanner.l:662
#20 0x0000000000631b3a in zend_include_or_eval (inc_filename=0x7fbaf74143f0, type=2) at ./Zend/zend_execute.c:2846
#21 0x000000000066d0a2 in ZEND_INCLUDE_OR_EVAL_SPEC_CV_HANDLER () at ./Zend/zend_vm_execute.h:35494
#22 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#23 0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414390) at ./build-7.1/xdebug.c:1995
#24 0x00000000005bd02d in zend_call_function (fci=fci@entry=0x7fff937b4d10, fci_cache=fci_cache@entry=0x7fff937b4ce0)
    at ./Zend/zend_execute_API.c:855
#25 0x00000000005ec000 in zend_call_method (object=0x7fbaf7467488, obj_ce=<optimized out>, fn_proxy=<optimized out>,
    function_name=0x7fbaf746e558 "go\\instrument\\classloading\\aopcomposerloader::loadclass#", function_name_len=<optimized out>,
    retval_ptr=retval_ptr@entry=0x0, param_count=1, arg1=0x7fbaf7414380, arg2=0x0) at ./Zend/zend_interfaces.c:99
#26 0x00000000004c93ce in zif_spl_autoload_call (execute_data=<optimized out>, return_value=<optimized out>) at ./ext/spl/php_spl.c:420
#27 0x00007fbaf6f65616 in xdebug_execute_internal (current_execute_data=0x7fbaf7414330, return_value=0x7fff937b4fa0) at ./build-7.1/xdebug.c:2145
#28 0x00000000005bd27a in zend_call_function (fci=fci@entry=0x7fff937b4fe0, fci_cache=fci_cache@entry=0x7fff937b4fb0)
    at ./Zend/zend_execute_API.c:871
#29 0x00000000005bd6de in zend_lookup_class_ex (name=name@entry=0x7fba76aa5830, key=0x7fba76aa55c0, use_autoload=use_autoload@entry=1)
    at ./Zend/zend_execute_API.c:1028
#30 0x00000000005be098 in zend_fetch_class_by_name (class_name=0x7fba76aa5830, key=<optimized out>, fetch_type=fetch_type@entry=512)
    at ./Zend/zend_execute_API.c:1463
#31 0x000000000066e217 in ZEND_NEW_SPEC_CONST_HANDLER () at ./Zend/zend_vm_execute.h:3199
#32 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#33 0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414230) at ./build-7.1/xdebug.c:1995
#34 0x0000000000670e8a in ZEND_DO_FCALL_SPEC_RETVAL_UNUSED_HANDLER () at ./Zend/zend_vm_execute.h:949
#35 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#36 0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414190) at ./build-7.1/xdebug.c:1995
#37 0x0000000000670e8a in ZEND_DO_FCALL_SPEC_RETVAL_UNUSED_HANDLER () at ./Zend/zend_vm_execute.h:949
#38 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#39 0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414120) at ./build-7.1/xdebug.c:1995
#40 0x000000000066d6ec in ZEND_INCLUDE_OR_EVAL_SPEC_TMPVAR_HANDLER () at ./Zend/zend_vm_execute.h:51699
#41 0x0000000000616a9b in execute_ex (ex=<optimized out>) at ./Zend/zend_vm_execute.h:429
#42 0x00007fbaf6f64cc6 in xdebug_execute_ex (execute_data=0x7fbaf7414030) at ./build-7.1/xdebug.c:1995
#43 0x0000000000673060 in zend_execute (op_array=op_array@entry=0x7fbaf7476000, return_value=return_value@entry=0x0)
    at ./Zend/zend_vm_execute.h:474
#44 0x00000000005cd5a3 in zend_execute_scripts (type=type@entry=8, retval=retval@entry=0x0, file_count=file_count@entry=3) at ./Zend/zend.c:1476
#45 0x0000000000569540 in php_execute_script (primary_file=0x7fff937b7a20) at ./main/main.c:2537
#46 0x0000000000446cb8 in main (argc=31327083, argv=0x1de0509) at ./sapi/fpm/fpm/fpm_main.c:1966
 [2017-05-16 04:58 UTC] laruence@php.net
-Assigned To: +Assigned To: laruence
 [2017-05-16 05:24 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=89dd7fb328589a9aa1719aa7c642a1378c5a926e
Log: Fixed bug #74596 (SIGSEGV with opcache.revalidate_path enabled)
 [2017-05-16 05:24 UTC] laruence@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 09:00:01 2026 UTC