Fixed bug #74596 (SIGSEGV with opcache.revalidate_path enabled)

Yeah, no test script is provided.. I got some troubles to make a one